# vdl-bot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: franchise.rs  mod.rs  profile.rs  status.rs
