[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
diesel = "2.2.10"
dotenv = "0.15.0"
dotenvy = "0.15.7"
log = "0.4.27"
rand = "0.9.1"
reqwest = "0.12.15"
serenity = { version = "0.12.4", features = ["client", "gateway", "framework", "standard_framework", "model", "http", "utils", "rustls_backend", "cache", "voice", "collector"] }
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
supabase_rs = "0.4.2"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
